--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-7/int08-7.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-7/int08-7.component.html
@@ -1,41 +1,128 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <br>
-<div class="ui grid">
-  <div class="sixteen wide column">
-    <h2 class="ui header">รายงานผลการตรวจสอบรายได้</h2>
+<form (submit)="onSubmit($event)" ngNativeValidate>
+  <div class="ui grid">
+    <div class="sixteen wide column">
+      <h2 class="ui header">รายงานผลการตรวจสอบรายได้</h2>
 
-    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>รายงานผลการตรวจสอบรายได้</span>
-    </div>
+      <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+        <span>รายงานผลการตรวจสอบรายได้</span>
+      </div>
 
-    <div class="ui attached segment">
-        <form class="ui form">
-            <div class="field">
-        
-              <label>      <input type="checkbox" id="check">&nbsp;&nbsp;&nbsp; 1)ใบเสร็จเสีย</label>
-            <textarea cols="5" rows="6"></textarea>
-            </div>
+      <div class="ui attached segment">
+        <div class="ui grid center aligned">
+          <div class="ui center aligned centered fourteen wide column">
+            <div class="ui form center aligned">
 
-            <div class="field">
-                <label> <input type="checkbox" id="check"> &nbsp;&nbsp;&nbsp; 2)นำส่งเงิน</label>
-           
-              <textarea cols="5" rows="6"></textarea>
-              </div>
-              <div class="ui center aligned grid">
-                  <div class="eight wide column">
-                    <button class="ui mini primary button" type="button">
-                      <i class="save icon"></i>บันทึก</button>
-                      <button class="ui mini yellow button" type="button">
-                          <i class="print icon"></i>ส่งออก</button>
+
+              <div class="inline fields">
+                <div class="three wide field"></div>
+                <div class="two wide field">
+                  <label>ส่วนราชการ</label>
+                </div>
+                <div class="four wide field">
+                  <input type="text" id="government" name="government" [(ngModel)]="obj.government">
+                </div>
+                <div class="one wide field"></div>
+                <div class="one wide field">
+                  <label> วันที่</label>
+                </div>
+                <div class="four wide field ui calendar" id="date1">
+                  <div class="ui input left icon">
+                    <i class="calendar alter nate outline icon"></i>
+                    <input type="calendar" id="date" name="date" [(ngModel)]="obj.date" autocomplete="off">
                   </div>
                 </div>
+              </div>
+
+              <div class="inline fields">
+                <div class="three wide field"></div>
+                <div class="two wide field">
+                  <label>เรื่อง</label>
+                </div>
+                <div class="five wide field">
+                  รายงานผลการตรวจสอบรายได้
+                </div>
+                <div class="one wide field">
+                  <label> เรียน
+                  </label>
+                </div>
+                <div class="four wide field">
+                  <input type="text" id="study" name="study" [(ngModel)]="obj.study">
+                </div>
+              </div>
+              <div class="inline fields">
+                <div class="three wide field"></div>
+                <div class="eight wide field">
+                  <div class="ui checkbox">
+                    <input type="checkbox" name="box1" [(ngModel)]="box1">
+                    <label>&nbsp;&nbsp;&nbsp;1)&nbsp;ใบเสร็จเสีย</label>
+                  </div>
+                </div>
+              </div>
+              <div class="inline fields">
+                <div class="three wide field"></div>
+                <div class="twelve wide field" [ngClass]="{'disabled': !box1}">
+                  <textarea  role="8" cols="10" [(ngModel)]="obj.billLost" id="billLost" name="billLost" maxlength="500"></textarea>
+                </div>
+              </div>
+
+              <div class="inline fields">
+                <div class="three wide field"></div>
+                <div class="eight wide field">
+                  <div class="ui checkbox">
+                    <input type="checkbox" name="box2" [(ngModel)]="box2">
+                    <label>&nbsp;&nbsp;&nbsp;2)&nbsp;นำส่งเงิน</label>
+                  </div>
+                </div>
+              </div>
+              <div class="inline fields">
+                <div class="three wide field"></div>
+                <div class="twelve wide field" [ngClass]="{'disabled': !box2}">
+                  <textarea role="8" cols="10" [(ngModel)]="obj.sendMoney" id="sendMoney" name="sendMoney" maxlength="500"></textarea>
+                </div>
+              </div>
+
+              <div class="inline fields">
+                <div class="three wide field"></div>
+                <div class="two wide field">
+                  <label>ผู้ตรวจสอบ</label>
+                </div>
+                <div class="four wide field">
+                  <input type="text" id="officer" name="officer" [(ngModel)]="obj.officer" disabled>
+                </div>
+              </div>
 
 
-            </form>
-
+              <div class="inline fields">
+                <div class="three wide field"></div>
+                <div class="two wide field">
+                  <label>ตำแหน่ง</label>
+                </div>
+                <div class="four wide field">
+                  <input type="text" id="position" name="position" [(ngModel)]="obj.position" disabled>
+                </div>
+              </div>
 
             </div>
-            
+          </div>
+        </div>
+
+      </div>
+
 
     </div>
   </div>
+
+  <div class="ui bottom centered attached segment">
+    <div class="ui center aligned grid">
+      <div class="eight wide column">
+        <button class="ui mini yellow button" type="submit">
+          <i class="print icon"></i>
+          ส่งออก
+        </button>
+      </div>
+    </div>
+  </div>
+
+</form>
