Edit Int0611 All

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-5/int06-11-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-5/int06-11-5.component.html
@@ -23,19 +23,6 @@
                       </option>
                     </select>
                 </div>
-
-                <!-- <div class="two wide field">
-                    <label class="text-right full-width">สถานะการดำเนินการ</label>
-                </div>
-
-                <div class="three wide field">
-                    <select name="type" class="ui dropdown search ai full-width" formControlName="status">
-                      <option value="">กรุณาเลือก</option>
-                      <option *ngFor="let st of statusList | async;" [value]="st.lovId">
-                        {{ st.subTypeDescription }}
-                      </option>
-                    </select>
-                </div> -->
             </div>
             <br>
             <div class="ui center aligned grid">
@@ -88,7 +75,7 @@
             </div>
 
             <div class="two wide field">
-                <label class="text-right full-width">- รอดำเนินการ</label>
+                <label class="text-right full-width">รอดำเนินการ</label>
             </div>
 
             <div class="two wide field">
@@ -105,7 +92,7 @@
             </div>
 
             <div class="two wide field">
-                <label class="text-right full-width">- ผ่าน</label>
+                <label class="text-right full-width">ผ่าน</label>
             </div>
 
             <div class="two wide field">
@@ -122,7 +109,7 @@
             </div>
 
             <div class="two wide field">
-                <label class="text-right full-width">- ไม่ผ่าน</label>
+                <label class="text-right full-width">ไม่ผ่าน</label>
             </div>
 
             <div class="two wide field">
@@ -148,7 +135,7 @@
 <br>
 <div id="showTable">
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white;">
-        <span>ผลการค้นหา</span>
+        <span>รายละเอียดใบขอเบิก</span>
     </div>
     <div class="ui form">
         <div class="ui attached segment">
