Edit Int0611 All

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-6/int06-11-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-6/int06-11-6.component.html
@@ -1,5 +1,5 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
-<br>
+<h2>ทำเลขที่อ้างอิงใบขอเบิก ขอจ่าย</h2>
 <div class="sixteen wide column">
   <div class="ui top centered attached header segment" style="background: #1e83db;color: white;">
     <span>ระบุเงื่อนไขในการค้นหา</span>
