--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-5/int06-11-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-5/int06-11-5.component.html
@@ -1,6 +1,5 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
-<br>
-
+<h2>ตรวจสอบหลักฐานการขอเบิก และทำใบขอเบิก</h2>
 <div class="ui top centered attached header segment" style="background: #1e83db;color: white;">
     <span>ระบุเงื่อนไขในการค้นหา</span>
 </div>
@@ -34,7 +33,6 @@
         </div>
     </div>
 </form>
-<br>
 <br>
 <div class="ui top centered attached header segment" style="background: #1e83db;color: white;">
     <span>ผลการค้นหา</span>
@@ -79,7 +77,7 @@
             </div>
 
             <div class="two wide field">
-                <input class="custom-readonly disabled" id="process" type="text" autocomplete="off">
+                <input class="custom-readonly disabled text-right" id="process" type="text" autocomplete="off">
             </div>
 
             <div class="one wide field">
@@ -96,7 +94,7 @@
             </div>
 
             <div class="two wide field">
-                <input class="custom-readonly disabled" id="pass" type="text" autocomplete="off">
+                <input class="custom-readonly disabled text-right" id="pass" type="text" autocomplete="off">
             </div>
 
             <div class="one wide field">
@@ -113,7 +111,7 @@
             </div>
 
             <div class="two wide field">
-                <input class="custom-readonly disabled" id="notPass" type="text" autocomplete="off">
+                <input class="custom-readonly disabled text-right" id="notPass" type="text" autocomplete="off">
             </div>
 
             <div class="one wide field">
@@ -131,7 +129,6 @@
         </div>
     </div>
 </div>
-<br>
 <br>
 <div id="showTable">
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white;">
